--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: Spring Boot CI Build
 
 on:
   push:
@@ -17,8 +17,21 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: 21
           distribution: temurin
+          java-version: 21
+          cache: maven
 
-      - name: Build with Maven
-        run: mvn clean install -DskipTests=false
+      - name: Verify Java version
+        run: java -version
+
+      - name: Clean and build (print full logs)
+        run: mvn clean package -e -X
+
+      - name: List generated files
+        run: ls -R target
+
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: spring-boot-build
+          path: target/*.jar
