--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: crawler_live
+        ports:
+          - "3306:3306"
+        options: >-
+          --health-cmd="mysqladmin ping -h 127.0.0.1"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+        # JDK 21 setup
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -24,7 +39,19 @@ jobs:
       - name: Verify Java version
         run: java -version
 
-      - name: Clean and build (print full logs)
+      - name: Wait for MySQL to be ready
+        run: |
+          for i in {1..20}; do
+            nc -z 127.0.0.1 3306 && echo "MySQL is up!" && break
+            echo "Waiting for MySQL..."
+            sleep 3
+          done
+
+      - name: Clean and build (debug logs)
+        env:
+          SPRING_DATASOURCE_URL: jdbc:mysql://127.0.0.1:3306/crawler_live
+          SPRING_DATASOURCE_USERNAME: root
+          SPRING_DATASOURCE_PASSWORD: root
         run: mvn clean package -e -X
 
       - name: List generated files
