--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Spring Boot CI Build
+name: Spring Boot CI + Deploy
 
 on:
   push:
@@ -13,28 +13,13 @@ on:
       - feature/**
 
 jobs:
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
 
-    services:
-      mysql:
-        image: mysql:8
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: crawler_live
-        ports:
-          - "3306:3306"
-        options: >-
-          --health-cmd="mysqladmin ping -h 127.0.0.1"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-        # JDK 21 setup
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -45,26 +30,38 @@ jobs:
       - name: Verify Java version
         run: java -version
 
-      - name: Wait for MySQL to be ready
-        run: |
-          for i in {1..20}; do
-            nc -z 127.0.0.1 3306 && echo "MySQL is up!" && break
-            echo "Waiting for MySQL..."
-            sleep 3
-          done
-
-      - name: Clean and build (debug logs)
-        env:
-          SPRING_DATASOURCE_URL: jdbc:mysql://127.0.0.1:3306/crawler_live
-          SPRING_DATASOURCE_USERNAME: root
-          SPRING_DATASOURCE_PASSWORD: root
+      - name: Build JAR (full logs)
         run: mvn clean package -e -X
 
-      - name: List generated files
-        run: ls -R target
-
-      - name: Upload JAR artifact
+      - name: Upload JAR Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: spring-boot-build
-          path: /*.jar
+          name: spring-boot-jar
+          path: target/*.jar
+
+      # -------------------------------
+      #     DEPLOY TO UBUNTU SERVER
+      # -------------------------------
+      - name: Install sshpass
+        run: sudo apt-get update && sudo apt-get install -y sshpass
+
+      - name: Copy JAR to Server
+        run: |
+          JAR_FILE=$(ls target/*.jar | head -n 1)
+          sshpass -p "${{ secrets.SERVER_PASSWORD }}" \
+            scp -o StrictHostKeyChecking=no \
+            "$JAR_FILE" \
+            ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/root/app.jar
+
+      - name: Start Spring Boot on server (port 3030)
+        run: |
+          sshpass -p "${{ secrets.SERVER_PASSWORD }}" ssh -o StrictHostKeyChecking=no \
+            ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "
+              echo 'Killing old process...'
+              pkill -f 'java -jar' || true
+
+              echo 'Starting new JAR on port 3030...'
+              nohup java -jar /root/app.jar --server.port=3030 > app.log 2>&1 &
+              sleep 3
+              pgrep -f 'java -jar'
+            "
