--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=CRUD
 
 spring.datasource.url=jdbc:mysql://localhost:3306/crawler_live
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=StrongP@ssw0rd!
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
